  modules: OptionException -> OptionError and DataException ->
  DataError.  Moved both to Errors.py and derive both from
  Errors.Error.

* Incorporated several changes for Mac OS suggested by Jon Moody.

* Added a gp_macosx.py file to support Mac OS X.  The only difference
  to gp_unix.py is the default terminal selection.

* Moved import statement in demo.py to global scope for Python 2.2.


Version 1.5:

* Broke up the module a bit for better maintainability.  The most
  commonly-used facilities are still available through "import
  Gnuplot", but a few more specialized things have been moved to
  separate modules, in particular funcutils.py and PlotItems.py.
  __init__.py now just imports things from other modules.

* funcutils.tabulate_function() can be used to evaluate a function
  on a 1-D or 2-D grid of points (this replaces grid_function,
  which only worked with 2-D grids).

* Added two helper functions, funcutils.compute_Data and
  funcutils.compute_GridData, which compute a function's values on
  a set of points and package the results into a PlotItem.

* GridFunc is no longer an independent class; it is now a factory
  function that returns a GridData.  GridFunc is deprecated in
  favor of funcutils.compute_GridData.

* Changed set_option to work from a table, so that it doesn't need to
  be overloaded so often.

* Made changes like those submitted by Matthew Martin
  <r47854@email.sps.mot.com> to allow the `smooth' option.

* Implemented test_persist for each platform to make it easier for
  users to determine whether the `-persist' option is supported.

* Added a prefer_persist option to serve as the default `persist'
  choice.

* Following a suggestion by Jannie Hofmeyr <jhsh@iafrica.com>, use
  "from os import popen" for Python 2.0 under Windows.  I don't use
  Windows, so let me know how this works.

* Added a setup.py file so that Gnuplot.py can be installed using
  Python distutils.
